<resources>
    <string name="app_name">FootballLeague</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masukkan_team_atau_event_lalu_enter">masukkan team atau event lalu enter</string>
    <string name="masukkan_team_lalu_enter">masukkan nama team lalu enter</string>
    <string name="add_to_favorite">Tambahkan ke Favorit</string>
    <string name="leagues">Liga</string>
    <string name="eventfavorites">Event Favorit</string>
    <string name="teamfavorites">Teams Favorit</string>
    <string name="title">Judul</string>
    <string name="date">Tanggal</string>
    <string name="hometeamname">homeTeamName</string>
    <string name="zero">0</string>
    <string name="separator">:</string>
    <string name="awayteamname">awayTeamName</string>
    <string name="moredetails">Lebih Detail</string>
    <string name="season">Musim</string>
    <string name="statistikpertandingan">Statistik pertandingan</string>
    <string name="dash">-</string>
    <string name="pencetakgoal">Pencetak Goal</string>
    <string name="tembakan">Tembakan</string>
    <string name="pemain">Pemain</string>
    <string name="penjagagawang">Penjaga Gawang</string>
    <string name="bek">Bek</string>
    <string name="pemaintengah">Pemain Tengah</string>
    <string name="pemyerang">Penyerang</string>
    <string name="subtitusi">Subtitusi</string>
    <string name="formasi">Formasi</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="pastmatch">Past Match</string>
    <string name="nextmatch">Next Match</string>
    <string name="favoritesevent">Favorites Event</string>
    <string name="teams">Teams</string>
    <string name="klasemen">Klasemen</string>
    <string name="teamname">teamName</string>
    <string name="_00">00</string>
    <string name="klasemenTotalLabel">T</string>
    <string name="klasemenLossLabel">L</string>
    <string name="klasemenDrawLabel">D</string>
    <string name="klasemenWinLabel">W</string>
    <string name="klasemenGoalsDifference">GD</string>
    <string name="klasemenGALabel">GA</string>
    <string name="klasemenGoalsFor">GF</string>
    <string name="klasemenPlayedLabel">P</string>
</resources>